# HZ

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
source/: hz.cpp  hz.h
source/core/: Assert.h  Base.h  BaseSystem.cpp  BaseSystem.h  Log.cpp  Log.h  Profiler.h
